--- a/network_topology starter solution.ipynb
+++ b/network_topology starter solution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "id": "8ce9c455",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "id": "ba921cc4",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "id": "98c2c0f4",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "id": "b0a5e6b4",
    "metadata": {},
    "outputs": [],
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "id": "f769a41d",
    "metadata": {},
    "outputs": [],
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "id": "59e44a08",
    "metadata": {},
    "outputs": [],
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "id": "b77bbab2",
    "metadata": {},
    "outputs": [],
@@ -435,31 +435,11 @@
     "    # Make changes here...\n",
     "    # Build an odd/even test network.\n",
     "    def load_data(self):\n",
-    "        # Build the network.\n",
-    "        self.network = NeuralNet([3, 4, 2])\n",
+    "        num_hidden_neurons = int(self.num_hidden_neurons_text.get())\n",
     "\n",
-    "        # Set synapse weights.\n",
-    "        weights = [\n",
-    "            [\n",
-    "                # Input layer.\n",
-    "                #  000   101   110   011\n",
-    "                [ -100,   10,   10, -100],  # Neuron 0\n",
-    "                [ -100, -100,   10,   10],  # Neuron 1\n",
-    "                [ -100,   10, -100,   10],  # Neuron 2\n",
-    "                [    5,  -15,  -15,  -15],  # Bias\n",
-    "            ],\n",
-    "            [\n",
-    "                # Hidden layer.\n",
-    "                # Odd  Even\n",
-    "                [ -10,  10 ],  # Neuron 0: 000\n",
-    "                [ -10,  10 ],  # Neuron 1: 101\n",
-    "                [ -10,  10 ],  # Neuron 2: 110\n",
-    "                [ -10,  10 ],  # Neuron 3: 011\n",
-    "                [   5,  -5 ],  # Bias\n",
-    "            ]\n",
-    "        ]\n",
-    "        self.set_synapse_weights(self.network.all_layers, weights)\n",
-    "        \n",
+    "        # Build the network.\n",
+    "        self.network = NeuralNet([3, num_hidden_neurons, 2])\n",
+    "\n",
     "        # Display the network.\n",
     "        #self.network.dump()\n",
     "\n",
@@ -661,19 +641,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "id": "fa5d6dda",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<__main__.App at 0x2147f325190>"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'Entry' object has no attribute 'Get'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mApp\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[7], line 26\u001b[0m, in \u001b[0;36mApp.__init__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbuild_ui()\n\u001b[0;32m     25\u001b[0m \u001b[38;5;66;03m# Load the data.\u001b[39;00m\n\u001b[1;32m---> 26\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     28\u001b[0m \u001b[38;5;66;03m# Draw the network.\u001b[39;00m\n\u001b[0;32m     29\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mredraw_network()\n",
+      "Cell \u001b[1;32mIn[7], line 38\u001b[0m, in \u001b[0;36mApp.load_data\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     37\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload_data\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m---> 38\u001b[0m     num_hidden_neurons \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnum_hidden_neurons_text\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mGet\u001b[49m())\n\u001b[0;32m     40\u001b[0m     \u001b[38;5;66;03m# Build the network.\u001b[39;00m\n\u001b[0;32m     41\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnetwork \u001b[38;5;241m=\u001b[39m NeuralNet([\u001b[38;5;241m3\u001b[39m, num_hidden_neurons, \u001b[38;5;241m2\u001b[39m])\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Entry' object has no attribute 'Get'"
+     ]
     }
    ],
    "source": [
@@ -705,7 +688,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
